--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,4 +119,30 @@ margin: 0 5px;
     padding: 10px 20px;
 }
 
-/* HERO STYLES END /*
+/* HERO STYLES END */
+
+/* "What we do style */
+
+.intro {
+    text-align: center;
+}
+
+.intro h2 {
+    /* add this alongside other declarations*/
+display: inline-block;
+font-size: 55px;
+color: #024e76;
+margin-bottom: 35px;
+padding: 0 100px 20px 100px;
+border-bottom: 3px solid;
+border-color: #fce138;
+}
+
+.intro p {
+    /* add this alongside other declarations*/
+    margin: 0 auto;
+    line-height: 1.7;
+    color: #39a6b2;
+    width: 80%;
+    font-size: 20px;
+}
