--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,13 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: 80%;
+    background-attachment: fixed;
   }
 
 header h1 {
@@ -23,6 +30,7 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a {
@@ -46,7 +54,15 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+  }
 
 footer {
     display: flex;
@@ -76,11 +92,12 @@ footer a {
 .hero {
 background-image: url("../images/hero-bg.jpg");
 background-size: cover;
-background-position: center;
+background-position: 80%;
 display: flex;
 justify-content: center;
 flex-wrap: wrap;
 align-items: flex-start;
+background-attachment: fixed;
 }
 
 .hero-cta {
@@ -96,10 +113,11 @@ align-items: flex-start;
 font-style: italic;
 font-size: 55px;
 color: #fce138;
+text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form {
-    background-color: #fce138;
+    background-color: rgba(252, 225, 56, .8);
     padding: 20px;
     color: #024e76;
     border-style: solid;
@@ -107,6 +125,8 @@ color: #fce138;
     border-color: #024e76;
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
 }
 
 .hero-form h3 {
@@ -126,7 +146,15 @@ color: #fce138;
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+
 }
+
+.form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+  }
 
 .hero-form label {
 margin: 0 5px;
@@ -138,7 +166,12 @@ margin: 0 5px;
     border: none;
     font-size: 16px;
     padding: 10px 20px;
+    border-radius: 10px;
 }
+
+.hero-form button:hover {
+    background-color: #39a6b2;  
+  }
 
 /* HERO STYLES END */
 
@@ -179,12 +212,17 @@ margin: 0 5px;
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid #39a6b2;
 }
+
+.step:last-child {
+    border-bottom: none;
+  }
+  
 
 .step h3 {
     color: #024e76;
@@ -325,7 +363,12 @@ text-align: right
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;  
+    border-radius: 10px;
+    /*Transparent background followed by focus*/
+    background-color: rgba(255,255,255, 0.75);
   }
+
+
 
   .contact-form button {
       width: 100%;
@@ -334,7 +377,18 @@ text-align: right
       color: #024e76;
       text-align: center;
       padding: 15px 0;
-      font-size: 16px
+      font-size: 16px;
+      border-radius: 10px;
+  }
+
+  .contact-form :focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+  }
+
+  .contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
   }
 
   /* Grid Style */
@@ -404,6 +458,7 @@ text-align: right
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
       }
     
       header h1 {
